--- a/index.html
+++ b/index.html
@@ -5,12 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BOOK ARCHIVE</title>
+     <!-- bootstarp -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 </head>
-<body>
-    
-    <h1>Hello</h1>
+<body class="bg-gray">
+    <h2 class="text-center text-success">Book Archive</h2>
+
+        <!-- book search area -->
+        <div class="input-group mb-3">
+            <input id="search-field" type="text" class="form-control" placeholder="search for your favourite book..." aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button onclick="searchBook()" class="btn btn-outline-secondary" type="button" id="search-button">search</button>
+          </div>
+
+          <!-- book search result -->
+          <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4 w-50 mx-auto">
+          </div>
+
+
         <!----- javascript ----->
     <script src="js/app.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 
 </body>
 </html>
