all books added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 </head>
 <body class="bg-gray">
-    <h2 class="text-center text-success">Book Archive</h2>
+    <h2 class="text-center text-success"> Search Your Favorite Books</h2>
 
         <!-- book search area -->
         <div class="input-group mb-3 w-50 mx-auto">
@@ -17,8 +17,10 @@
             <button onclick="searchBook()" class="btn btn-outline-secondary" type="button" id="search-button">search</button>
           </div>
           <div class="w-50 mx-auto ps-2" id="totalResult"></div>
-          <!-- book search result -->
 
+          <!----- error ----->
+          <div id="error"></div>
+          <!-- book search result -->
           <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4 w-50 mx-auto">
           </div>
 
